# InferDeck

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.MD  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  PLAN.md  README.md  cleanup-sweep.txt  compile_debug.bat  cypress.config.ts  gateway.err  opencode.json  opencode.json.bak  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  query  session-ses_19ef.md  start_service.ps1  stderr.txt  stdout.txt  test_coder.json  test_debug.cpp  test_fix.ps1  test_moe.json  test_prompt.json  test_prompt_gpt.json  test_request.json  test_request2.json  test_stream.json  tsconfig.base.json  vcpkg.json  vitest.config.ts
apps/benchmark-runner/: CMakeLists.txt
apps/benchmark-runner/include/benchmark/: benchmark.hpp
apps/benchmark-runner/src/: benchmark.cpp  main.cpp
apps/gateway-service/: CMakeLists.txt  build-bundle.mjs  electron.cjs  package.json  tsconfig.json
apps/gateway-service/config/: config  gateway.local.yaml
apps/gateway-service/data/: gateway.sqlite  gateway.sqlite-shm  gateway.sqlite-wal
apps/gateway-service/dist-bundle/: main.js  main.js.map
apps/gateway-service/dist-bundle/config/: gateway.example.yaml  gateway.local.yaml
apps/gateway-service/release/: README.txt  opencode.json  run.bat
apps/gateway-service/release/config/: gateway.local.yaml
apps/gateway-service/release/data/: gateway.sqlite
apps/gateway-service/src/: RuntimeActivity.cpp  RuntimeActivity.hpp  Server.cpp  Server.hpp  WhisperRuntime.cpp  WhisperRuntime.hpp  app.ts  main.cpp  main.ts
apps/gateway-service/src/config/: ConfigLoader.cpp  ConfigLoader.hpp  loadConfig.ts  schema.ts
apps/gateway-service/src/db/: database.ts
apps/gateway-service/src/http/: server.ts
apps/gateway-service/src/routes/: AudioSpeech.cpp  AudioSpeech.hpp  AudioTranscriptions.cpp  AudioTranscriptions.hpp  ChatCompletions.cpp  ChatCompletions.hpp  Completions.cpp  Completions.hpp  Dashboard.cpp  Dashboard.hpp  Documents.cpp  Documents.hpp  Embeddings.cpp  Embeddings.hpp  FineTuningJobs.cpp  FineTuningJobs.hpp  Health.cpp  Health.hpp  Images.cpp  Images.hpp  Metrics.cpp  Metrics.hpp  Models.cpp  Models.hpp  OllamaCompat.cpp  OllamaCompat.hpp
apps/gateway-service/src/services/: EventBus.ts  HardwareTelemetry.ts  LlamaServerProcessManager.ts  (+5 more)
apps/gateway-service/tests/: llama_health.test.ts
apps/hardware-adlx-helper/: CMakeLists.txt  README.md  inferdeck_adlx_helper.cpp
apps/inferdeck-gateway/: CMakeLists.txt
apps/inferdeck-gateway/src/: config.hpp  main.cpp
apps/inferdeck-gateway/static/: index.html
apps/model-tester/: CMakeLists.txt  main.cpp  report_printer.hpp  swap_exerciser.hpp  swap_report.hpp
libs/backends/: CMakeLists.txt
libs/backends/src/: BackendRegistry.cpp  GpuResourceManager.cpp
libs/core/: CMakeLists.txt
libs/core/src/: Base64.cpp  Config.cpp  JobQueue.cpp  Logger.cpp  Metrics.cpp  WorkerPool.cpp
libs/engine/: CMakeLists.txt
libs/engine/src/: slot_pool.cpp
libs/engine/tests/: CMakeLists.txt  test_engine.cpp
libs/foundation/: CMakeLists.txt
libs/foundation/src/: json_utils.cpp  logging.cpp
libs/foundation/tests/: CMakeLists.txt  test_foundation.cpp
libs/gateway/: CMakeLists.txt
libs/gateway/src/: anthropic_routes.cpp  dashboard_routes.cpp  metrics_builder.cpp  routes.cpp  streaming_sanitizer.cpp
libs/gateway/tests/: CMakeLists.txt  standalone_test.cpp  test_anthropic_routes.cpp  test_auth.cpp  test_routes.cpp  test_streaming_sanitizer.cpp
libs/llama_cpp_wrapper/: CMakeLists.txt
libs/llama_cpp_wrapper/src/: GGUFParser.cpp  LlamaEngine.cpp  LlamaServerManager.cpp  VulkanDevice.cpp  continuous_batch_scheduler.cpp  llama_cpp_model.cpp
libs/llama_cpp_wrapper/tests/: CMakeLists.txt  test_llama_cpp_model.cpp
libs/messaging/: CMakeLists.txt
libs/messaging/src/: conversions.cpp
libs/messaging/tests/: CMakeLists.txt  test_messaging.cpp
libs/model/: CMakeLists.txt
libs/model/src/: backend_coordinator.cpp  model_registry.cpp
libs/model/tests/: CMakeLists.txt  test_model.cpp  test_swap_cancellation.cpp
libs/observability/: CMakeLists.txt
libs/observability/src/: gpu_telemetry.cpp  logger.cpp  metrics.cpp  stats_db.cpp
libs/observability/tests/: CMakeLists.txt  test_gpu_telemetry.cpp  test_helpers.hpp  test_logger.cpp  test_metrics.cpp  test_stats_db.cpp
libs/optimize/: CMakeLists.txt
libs/optimize/src/: search_space.cpp  study.cpp  yaml_loader.cpp
libs/optimize/tests/: CMakeLists.txt  test_search_space.cpp  test_study.cpp  test_yaml_loader.cpp
libs/sampling/: CMakeLists.txt
libs/sampling/src/: family_defaults.cpp  sampler.cpp
libs/sampling/tests/: CMakeLists.txt  test_sampler.cpp
libs/scheduler/: CMakeLists.txt
libs/scheduler/src/: scheduler.cpp
libs/scheduler/tests/: CMakeLists.txt  test_scheduler.cpp
libs/tests/: AudioSpeechTest.cpp  AudioTranscriptionsTest.cpp  CMakeLists.txt  ChatCompletionsTest.cpp  CompletionsTest.cpp  DashboardRoutesTest.cpp  DocumentsTest.cpp  EmbeddingsTest.cpp  FineTuningJobsTest.cpp  HealthTest.cpp  ImagesTest.cpp  MetricsTest.cpp  ModelsTest.cpp  ToolCallingPipelineTest.cpp  benchmarks.cpp  compat_orchestration_tests.cpp  test_backend_registry.cpp  test_config.cpp  test_embedding_backend.cpp  test_gguf_parser.cpp  test_gpu_resource_manager.cpp  test_image_backend.cpp  test_llama_engine.cpp  test_logger.cpp  test_metrics.cpp  test_stt_backend.cpp  test_training_backend.cpp  test_tts_backend.cpp  test_vector_store.cpp  test_vulkan_device.cpp
libs/tests/benchmarks/: CMakeLists.txt  benchmarks.cpp
libs/vector_store/: CMakeLists.txt
libs/vector_store/src/: VectorStore.cpp
tests/integration/: CMakeLists.txt  fixture_loader.hpp  gateway.test.ts  opencode.test.ts  run.sh  test_auth_headers.cpp  test_mocked_coordinator.cpp  test_realistic_workloads.cpp  test_refusal_handling.cpp  test_sse_streaming.cpp
tests/parity/: CMakeLists.txt  README.md  prompts.json  record_baseline.ps1  run.ps1  run.sh
tests/parity/src/: compare.cpp  prompts.cpp  runner.cpp
tests/parity/tests/: CMakeLists.txt  test_compare.cpp  test_prompts.cpp  test_runner.cpp
(+236 files in other folders)
